# 02-lambda

./: LICENSE  Makefile  Makefile.cab  README.md  Test.hs  cabal.project  hw2-lambda.cabal  stack.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/classroom/: autograding.json
tests/: 01_pair.lc  01_plus.lc  02_minus.lc  03_fact.lc
