name:                hw2-lambda
version:             0.1.0.0
synopsis:            Starter code for cse130 homework 02-lambda
license:             MIT
license-file:        LICENSE
author:              Michael Borkowski and Ranjit Jhala
maintainer:          mborkows@eng.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable hw2
  build-depends:       base
  default-language:    Haskell2010
  main-is:             Main.hs

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty,
                    tasty-hunit,
                    elsa >= 0.2.2.0
